--- a/views/data.tt
+++ b/views/data.tt
@@ -3,6 +3,7 @@
         <h1>
             Search results <small class="search_term">for term "[% search | html_entity %]" ([% count %] results)</small>
 	    <form id="clear_search" action="/data" method="post">
+                <input type="hidden" name="csrf_token" value="[% csrf_token %]">
 		<button type="submit" name="clear_search" value="clear_search" class="btn btn-default">
 		Clear <span class="visually-hidden">search results</span>
 		</button>
@@ -153,6 +154,7 @@
         [% IF viewtype == "table" %]
             <div class="col-md-3 table-rows-pagination">
                <form method="get" class="form-inline">
+                   <input type="hidden" name="csrf_token" value="[% csrf_token %]">
                     <div class="form-group">
                         <label for="rows_per_page" class="control-label">Rows per page</label>
                         <select id="rows_per_page" class="form-control" name="rows" onchange="this.form.submit()" role="listbox">
