--- a/views/group.tt
+++ b/views/group.tt
@@ -1,6 +1,7 @@
 [% IF group %]
 <h2>[% IF group.id %]Rename group[% ELSE %]Add a group[% END %]</h2>
 <form role="form" method="post">
+    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
     <div class="row">
         <div class="col-md-6">
             [% IF group.id %]
@@ -69,6 +70,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form role="form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
