--- a/views/view.tt
+++ b/views/view.tt
@@ -8,6 +8,7 @@
     [% END %]
 </h2>
 <form role="form" method="post">
+    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
@@ -131,6 +132,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <form role="form" method="post" enctype="multipart/form-data">
+                    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
