--- a/views/audit.tt
+++ b/views/audit.tt
@@ -27,6 +27,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form role="form" method="post">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="modal_filter-title">Filtering</h4>
