--- a/views/config.tt
+++ b/views/config.tt
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-md-12">
         <form role="form" method="post">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <label for="sort_layout_id">Default sort:</label>
             <div class="row">
                 <div class="col-md-6">
