--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -280,6 +280,7 @@
 </script>
 
 <form role="form" method="post" enctype="multipart/form-data" style="display: none" action="/edits">
+    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
     <input type="hidden" name="q" id="changed_data">
 
     <div class="row">
