--- a/views/files.tt
+++ b/views/files.tt
@@ -4,24 +4,22 @@
 <div class="row">
     <div class="col-md-12">
         <a href="" data-toggle="modal" data-target="#modal_upload" class="btn btn-default">Upload a file...</a>
-        <form role="form" method="post">
-            <table class="table table-striped">
-                <thead>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>ID:</th>
+                    <th>Name:</th>
+                </tr>
+            </thead>
+            <tbody>
+                [% FOR file IN files %]
                     <tr>
-                        <th>ID:</th>
-                        <th>Name:</th>
+                        <td>[% file.id %]</td>
+                        <td><a href="/file/[% file.id %]">[% file.name | html %]</a></td>
                     </tr>
-                </thead>
-                <tbody>
-                    [% FOR file IN files %]
-                        <tr>
-                            <td>[% file.id %]</td>
-                            <td><a href="/file/[% file.id %]">[% file.name | html %]</a></td>
-                        </tr>
-                    [% END %]
-                </tbody>
-            </table>
-        </form>
+                [% END %]
+            </tbody>
+        </table>
     </div>
 </div>
 
@@ -29,6 +27,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form role="form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="modal_filter-title">Upload File</h4>
