--- a/views/graph.tt
+++ b/views/graph.tt
@@ -1,5 +1,6 @@
 <h2>[% IF graph.id %]Edit graph[% ELSE %]Add a graph[% END %]</h2>
 <form role="form" method="post">
+    <input type="hidden" name="csrf_token" value="[% csrf_token %]">
     <div class="row">
         <div class="col-md-6">
             [% IF graph.id %]
@@ -122,6 +123,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form role="form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
