--- a/views/import/data.tt
+++ b/views/import/data.tt
@@ -7,6 +7,7 @@
 <div class="row">
     <div class="col-md-6">
         <form  role="form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="form-group">
                 <label for="file">CSV file:</label>
                 <input type="file" id="file" name="file">
