--- a/views/link.tt
+++ b/views/link.tt
@@ -9,6 +9,7 @@
 <form role="form" method="post">
     <div class="row">
         <div class="col-md-6">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             [% IF record.current_id %]
                 <input type="hidden" name="current_id" value="[% record.current_id %]">
             [% END %]
