--- a/views/purge.tt
+++ b/views/purge.tt
@@ -7,6 +7,7 @@
 </p>
 [% IF records.size %]
     <form role="form" method="post">
+        <input type="hidden" name="csrf_token" value="[% csrf_token %]">
         <table class="table table-striped">
             <tr>
                 <th><input type="checkbox" id="selectall" title="Select/deselect all"></th>
