--- a/views/user/upload.tt
+++ b/views/user/upload.tt
@@ -4,6 +4,7 @@
 <div class="row">
     <div class="col-md-6">
         <form  role="form" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             <div class="form-group">
                 <label for="file">CSV File:</label>
                 <input type="file" id="file" name="file">
