--- a/views/modal_dialog.tt
+++ b/views/modal_dialog.tt
@@ -17,7 +17,9 @@
         <div class="modal-content">
         [% IF modal_with_form %]
             <form class="form" [% modal_form_action && 'action="$modal_form_action"' %] method="[% modal_form_method || 'get' %]">
-            <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+            [% IF modal_form_method == "post" %]
+                <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+            [% END %]
         [% END %]
             <div class="modal-header">
                 [% IF modal_heading %]
