--- a/views/wizard/user_add.tt
+++ b/views/wizard/user_add.tt
@@ -52,6 +52,8 @@
       </div>
       
       <form method="post">
+        [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
+        
         <div class="modal-frame" data-config='{"step":1,"frame":1,"item":null,"count":null}'>
           <div class="modal-body">
             <div class="container-fluid">
